--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 
-.horizontal-align {
+.vertical-align {
     min-height: 100vh;
     justify-content: center;
 }
@@ -19,6 +19,10 @@
     justify-content: center;
     align-items: center;
     background: white;
+}
+
+.load {
+    height: 80vh;
 }
 
 .wave {
